# public-python-app

./: .tool-versions  README.md  pyproject.toml  startup.txt
flaskr/: __init__.py  main.py
flaskr/templates/: index.html
