[tool.poetry]
name = "public-python-app"
version = "0.1.0"
description = ""
authors = ["ki5hara <t70.kihara.kazuto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
